<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/viewGithub"
        android:title="@string/viewGithub" />
    <item
        android:id="@+id/actionAddEntry"
        android:title="@string/actionAddEntry" />
    <item
        android:id="@+id/actionRemoveEntry"
        android:title="@string/actionRemoveEntry" />
    <item
        android:id="@+id/actionAddDataSet"
        android:title="@string/actionAddDataSet" />
    <item
        android:id="@+id/actionRemoveDataSet"
        android:title="@string/actionRemoveDataSet" />
    <item
        android:id="@+id/actionClear"
        android:title="@string/actionClearChart" />
    <item
        android:id="@+id/actionSave"
        android:title="@string/actionSave" />

</menu>
